adds scratch work and error handler, also changes measurements in swagger
