# swagger_output.json
@@ -14,10 +14,10 @@
   "consumes": [],
   "produces": [],
   "paths": {
-    "/changes": {
+    "/measurements": {
       "get": {
         "tags": [],
-        "description": "Get a list of Changes",
+        "description": "Get a list of measurements",
         "parameters": [
           {
             "in": "query",
@@ -32,19 +32,19 @@
           "200": {
             "type": "object",
             "schema": {
-              "$ref": "#/definitions/ChangeResponse"
+              "$ref": "#/definitions/MeasurementResponse"
             }
           }
         }
       },
       "post": {
         "tags": [],
-        "description": "Pass a change",
+        "description": "post a measurement",
         "parameters": [
           {
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/ChangeRequest"
+              "$ref": "#/definitions/MeasurementRequest"
             }
           }
         ],
@@ -83,7 +83,7 @@
         }
       }
     },
-    "/changesCollection": {
+    "/measurementsCollection": {
       "post": {
         "tags": [],
         "description": "POST with Collection instead of Map",
@@ -91,7 +91,7 @@
           {
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/ChangeRequestCollection"
+              "$ref": "#/definitions/MeasurementRequestCollection"
             }
           }
         ],
@@ -106,7 +106,7 @@
   "definitions": {
     "Measurements": {
       "type": "object",
-      "description": "Any JSON which represents Changes",
+      "description": "Any JSON which represents measurements",
       "example": {
         "bloodSugar": [
           {
@@ -143,7 +143,7 @@
         }
       }
     },
-    "ChangeRequest": {
+    "MeasurementRequest": {
       "type": "object",
       "required": [
         "guid"
@@ -199,7 +199,7 @@
         }
       }
     },
-    "ChangeRequestCollection": {
+    "MeasurementRequestCollection": {
       "type": "object",
       "required": [
         "guid",
@@ -263,7 +263,7 @@
         }
       }
     },
-    "ChangeResponse": {
+    "MeasurementResponse": {
       "type": "object",
       "example": {
         "guid": "abc123",
